# Jarvis-Fit

./: Default_session_state.json  JarvisFit_Project_Documentation.md  README.md  Untitled  pyproject.toml
src/jarvisfit/: crew.py  main.py  state.py
src/jarvisfit/config/: __init__.py  agents.yaml  settings.py  tasks_old.yaml  wake_tasks.yaml
src/jarvisfit/data/: diet_rules.json  session_state.json  workout_plan.json
src/jarvisfit/tools/: __init__.py  datetime_tool.py  diet_rules_tool.py  intent_parser_tool.py  location_tool.py  news_tool.py  session_state_tool.py  speaker_tool.py  voice_listener_tool.py  weather_tool.py  workout_plan_loader_tool.py
src/jarvisfit/ui/: __init__.py  gradio_app.py
src/jarvisfit/voice/: __init__.py  listener.py
