[project]
name = "jarvisfit"
version = "0.1.0"
description = "JarvisFit — Voice activated agentic fitness assistant using CrewAI and Gemini"
authors = [{ name = "Abhishek", email = "abhiramos5829@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.67.0",
    "langchain-google-genai>=1.0.0",
    "google-generativeai>=0.7.0",
    "gradio>=4.44.0",
    "SpeechRecognition>=3.10.0",
    "PyAudio>=0.2.14",
    "google-genai>=0.8.0",
    "pygame>=2.6.0",
    "requests>=2.32.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.0",
    "PyYAML>=6.0.1",
]

[project.scripts]
jarvisfit = "jarvisfit.main:main"
run_crew = "jarvisfit.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jarvisfit"]

[tool.crewai]
type = "crew"